# zos-ccsid-converter

./: .gitignore  .zdx.json  BUNDLING.md  DEVELOPER_USAGE_ISSUE.md  IMPLEMENTATION_NOTES.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_SUMMARY.md  README.md  README_LOCATION.md  STD1.cfg  TESTING_BUNDLED_PACKAGE.md  ZOS_UTIL_VALIDATION.md  Z_PYTHON_MODE_TIPS.md  build  check_chattr_availability.py  pyproject.toml  setenv  setup.py  test_f_settag_issue.py  test_pipe_tagging.py  test_structure_layout.py  zdxbuild
examples/: example_service_usage.py
tests/: README.md  run_all_tests.py  test_developer_usage_pattern.py  test_ebcdic_converter.py  test_stdin_info.py
zos_ccsid_converter/: __init__.py  cli.py  converter.py
