[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zos-ccsid-converter"
version = "1.0.0"
description = "z/OS CCSID converter using fcntl for code page detection and conversion"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
keywords = ["zos", "ccsid", "converter", "codepage", "ebcdic", "ascii", "mainframe"]
authors = [
    {name = "IBM"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/cicsdev/cics-banking-sample-application-cbsa"
Repository = "https://github.com/cicsdev/cics-banking-sample-application-cbsa"
Documentation = "https://github.com/cicsdev/cics-banking-sample-application-cbsa"

[project.scripts]
zos-ccsid-converter = "zos_ccsid_converter.cli:main"

[tool.setuptools]
packages = ["zos_ccsid_converter"]

[tool.setuptools.package-data]
zos_ccsid_converter = ["py.typed"]