[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zos-ccsid-converter"
version = "0.1.5"
description = "z/OS CCSID converter using fcntl for code page detection and conversion"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["zos", "z/OS", "ccsid", "converter", "codepage", "ebcdic", "ascii", "mainframe"]
authors = [
    {name = "Mike Fulton"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Other OS",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/MikeFultonDev/zos-ccsid-converter"
Repository = "https://github.com/MikeFultonDev/zos-ccsid-converter"
Documentation = "https://github.com/MikeFultonDev/zos-ccsid-converter"

[project.scripts]
zos-ccsid-converter = "zos_ccsid_converter.cli:main"

[tool.setuptools]
packages = ["zos_ccsid_converter"]

[tool.setuptools.package-data]
zos_ccsid_converter = ["py.typed"]

[tool.setuptools_scm]
# Suppress setuptools_scm warnings when not using git versioning
fallback_version = "1.0.0"